# candle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
candle-book/: Cargo.toml
candle-book/src/: SUMMARY.md  error_manage.md  lib.rs  simplified.rs  tracing.md
candle-book/src/guide/: hello_world.md  installation.md
candle-core/: Cargo.toml
candle-core/benches/benchmarks/: affine.rs  conv_transpose2d.rs  copy.rs  matmul.rs  mod.rs  qmatmul.rs  random.rs  reduce.rs  unary.rs  where_cond.rs
candle-core/examples/: basics.rs  metal_basics.rs
candle-core/src/: backend.rs  backprop.rs  conv.rs  custom_op.rs  device.rs  display.rs  error.rs  lib.rs  mkl.rs  op.rs  safetensors.rs  sort.rs  storage.rs  tensor.rs  test_utils.rs  utils.rs
candle-core/src/cpu/: mod.rs  simd128.rs
candle-core/src/cpu_backend/: conv2d.rs  mod.rs
candle-core/src/quantized/: avx.rs  ggml_file.rs  gguf_file.rs  k_quants.rs  metal.rs  mod.rs  neon.rs  simd128.rs  utils.rs
candle-core/tests/: conv_tests.rs  custom_op_tests.rs  grad_tests.rs  layout_tests.rs  matmul_tests.rs  pool_tests.rs  quantized_tests.rs  tensor_tests.rs
candle-datasets/: Cargo.toml
candle-datasets/src/: hub.rs
candle-datasets/src/nlp/: tinystories.rs
candle-examples/: Cargo.toml  build.rs  buildtime_downloader.rs
candle-examples/examples/beit/: main.rs
candle-examples/examples/bert/: main.rs
candle-examples/examples/bert_single_file_binary/: main.rs
candle-examples/examples/bigcode/: main.rs
candle-examples/examples/blip/: README.md  main.rs
candle-examples/examples/chatglm/: main.rs
candle-examples/examples/chinese_clip/: README.md  main.rs
candle-examples/examples/clip/: README.md  main.rs
candle-examples/examples/codegeex4-9b/: README.org  main.rs
candle-examples/examples/colpali/: README.md  main.rs
candle-examples/examples/convmixer/: main.rs
candle-examples/examples/convnext/: main.rs
candle-examples/examples/csm/: README.md  main.rs
candle-examples/examples/custom-ops/: README.md  main.rs
candle-examples/examples/debertav2/: README.md  main.rs
candle-examples/examples/deepseekv2/: README.md  main.rs
candle-examples/examples/depth_anything_v2/: README.md  main.rs
candle-examples/examples/dinov2/: main.rs
candle-examples/examples/dinov2reg4/: main.rs
candle-examples/examples/distilbert/: main.rs
candle-examples/examples/efficientnet/: main.rs
candle-examples/examples/efficientvit/: main.rs
candle-examples/examples/encodec/: main.rs
candle-examples/examples/eva2/: main.rs
candle-examples/examples/falcon/: main.rs
candle-examples/examples/fastvit/: main.rs
candle-examples/examples/flux/: README.md  main.rs
candle-examples/examples/gemma/: README.md
candle-examples/examples/glm4/: README.md
candle-examples/examples/granite/: README.md  main.rs
candle-examples/examples/granitemoehybrid/: README.md
candle-examples/examples/gte-qwen/: README.md
candle-examples/examples/helium/: README.md  main.rs
candle-examples/examples/hiera/: main.rs
candle-examples/examples/jina-bert/: main.rs
candle-examples/examples/llama/: main.rs
candle-examples/examples/llama2-c/: main.rs
candle-examples/examples/llama_multiprocess/: main.rs  model.rs
candle-examples/examples/llava/: image_processor.rs  readme.md
candle-examples/examples/mamba/: main.rs
candle-examples/examples/mamba-minimal/: main.rs
candle-examples/examples/marian-mt/: main.rs
candle-examples/examples/metavoice/: main.rs
candle-examples/examples/mimi/: main.rs
candle-examples/examples/mistral/: README.md
candle-examples/examples/mixtral/: main.rs
candle-examples/examples/mnist-training/: main.rs
candle-examples/examples/mobileclip/: main.rs
candle-examples/examples/mobilenetv4/: main.rs
candle-examples/examples/mobileone/: main.rs
candle-examples/examples/moondream/: README.md
candle-examples/examples/musicgen/: main.rs
candle-examples/examples/nvembed_v2/: main.rs
candle-examples/examples/olmo/: main.rs
candle-examples/examples/onnx/: main.rs
candle-examples/examples/onnx-llm/: main.rs
candle-examples/examples/orpheus/: README.md  main.rs
candle-examples/examples/paligemma/: README.md
candle-examples/examples/parler-tts/: main.rs
candle-examples/examples/phi/: main.rs
candle-examples/examples/pixtral/: README.md  main.rs
candle-examples/examples/quantized/: README.md  main.rs
candle-examples/examples/quantized-gemma/: main.rs
candle-examples/examples/quantized-phi/: main.rs
candle-examples/examples/quantized-qwen2-instruct/: main.rs
candle-examples/examples/quantized-qwen3/: main.rs
candle-examples/examples/quantized-t5/: main.rs
candle-examples/examples/qwen/: README.md
candle-examples/examples/recurrent-gemma/: README.md
candle-examples/examples/replit-code/: main.rs
candle-examples/examples/repvgg/: main.rs
candle-examples/examples/resnet/: main.rs
candle-examples/examples/rwkv/: main.rs
candle-examples/examples/segment-anything/: main.rs
candle-examples/src/: audio.rs  lib.rs
candle-flash-attn/: Cargo.toml
candle-kernels/: Cargo.toml
candle-metal-kernels/: Cargo.toml
candle-nn/: Cargo.toml
candle-nn/examples/: basic_optimizer.rs  cpu_benchmarks.rs
candle-nn/src/: activation.rs  cpu_flash_attention.rs  layer_norm.rs  lib.rs  linear.rs  ops.rs  rotary_emb.rs  var_builder.rs
candle-nn/tests/: batch_norm.rs  group_norm.rs  kv_cache.rs  layer_norm.rs  loss.rs  ops.rs  optim.rs  rnn.rs
candle-onnx/: Cargo.toml
candle-onnx/src/: eval.rs  onnx.proto3
candle-onnx/tests/: ops.rs
candle-pyo3/: Cargo.toml  test.py
candle-pyo3/src/: lib.rs
candle-transformers/: Cargo.toml
candle-wasm-examples/bert/: Cargo.toml
candle-wasm-examples/llama2-c/: Cargo.toml
candle-wasm-examples/phi/: Cargo.toml
candle-wasm-examples/yolo/: Cargo.toml
candle-wasm-tests/: Cargo.toml
chloe/: .gitignore  Cargo.toml  README.md
chloe/src/: cli.rs  config.rs  main.rs  markdown.rs  mode.rs  token_output_stream.rs  training.rs
chloe/src/mode/: chat.rs  (+2 more)
tensor-tools/: Cargo.toml
tensor-tools/src/: main.rs
(+137 files in other folders)
