[workspace]
members = [
    "candle-core",
    "candle-datasets",
    "candle-examples",
    "candle-nn",
    "candle-book",
    "candle-flash-attn",
    "candle-onnx",
    "candle-transformers",
    "candle-kernels",
    "tensor-tools",
]
exclude = [
    "candle-wasm-examples/*",
    "candle-wasm-tests",
    "candle-pyo3",
    "candle-metal-kernels",
]
resolver = "3"

[workspace.package]
version = "0.9.2-trash"
edition = "2024"
description = "Minimalist ML framework."
repository = "https://github.com/azzybana/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
ab_glyph = "0.*"
accelerate-src = { version = "0.*" }
anyhow = { version = "1.*", features = ["backtrace"] }
byteorder = "1.*"
candle = { path = "./candle-core", package = "candle-core" }
candle-datasets = { path = "./candle-datasets" }
candle-flash-attn = { path = "./candle-flash-attn" }
candle-kernels = { path = "./candle-kernels" }
candle-metal-kernels = { path = "./candle-metal-kernels" }
candle-nn = { path = "./candle-nn" }
candle-onnx = { path = "./candle-onnx" }
candle-transformers = { path = "./candle-transformers" }
clap = { version = "4.*", features = ["derive"] }
criterion = { version = "0.*", default-features = false }
cudarc = { version = "0.*", features = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "f8",
    "cuda-version-from-build-system",
    "dynamic-linking",
], default-features = false }
fancy-regex = "0.*"
gemm = { version = "0.*", features = ["wasm-simd128-enable"] }
hf-hub = "0.*"
half = { version = "2.*", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
float8 = { version = "0.*", features = ["num-traits", "rand_distr"] }
hound = "3.*"
image = { version = "0.*", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = { version = "0.*", default-features = false }
intel-mkl-src = { version = "0.*", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.*" }
log = "0.*"
memmap2 = { version = "0.*", features = ["stable_deref_trait"] }
num_cpus = "1.*"
num-traits = "0.*"
parquet = { version = "57.*" }
rand = "0.*"
rand_distr = "0.*"
rayon = "1.*"
safetensors = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_plain = "1.*"
serde_json = "1.*"
thiserror = "2.*"
tokenizers = { version = "0.*", default-features = false }
tracing = "0.*"
tracing-chrome = "0.*"
tracing-subscriber = "0.*"
ug = "0.*"
ug-cuda = "0.*"
ug-metal = "0.*"
yoke = { version = "0.*", features = ["derive"] }
zip = { version = "6.*", default-features = false }
objc2-metal = { version = "0.*" }
objc2-foundation = { version = "0.*" }

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.debug]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
relocation-model = "static"
relro-level = "off"
overflow-checks = false
rustflags = [
    "-C",
    "target-cpu=native",
    "-Z",
    "mir-opt-level=3",
    "-Z",
    "tune-cpu=native",
    "-C",
    "llvm-args=-inline-threshold=1000",
    "-C",
    "llvm-args=-unroll-threshold=1000",
    "-C",
    "llvm-args=-enable-unsafe-fp-math",
]

[lints.clippy]
all = "deny"
restricted = "allow"
nursery = "allow"
