cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "candle-core",
    "candle-datasets",
    "candle-examples",
    "candle-nn",
    "candle-book",
    "candle-onnx",
    "candle-transformers",
    "tensor-tools",
]
resolver = "3"

[workspace.package]
version = "0.9.2-trash"
edition = "2024"
rust-version = "1.92"
description = "Minimalist ML framework."
repository = "https://github.com/azzybana/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "Apache-2.0"
license-file = "LICENSE-APACHE"

[workspace.dependencies]
anyhow = "1.*"
byteorder = "1.*"
candle = { path = "./candle-core", package = "candle-core" }
candle-datasets = { path = "./candle-datasets" }
candle-nn = { path = "./candle-nn" }
candle-onnx = { path = "./candle-onnx" }
candle-transformers = { path = "./candle-transformers" }
clap = { version = "4.*", features = ["derive"] }
cpal = "0.*"
criterion = { version = "0.*", default-features = false }
csv = "1.*"
enterpolation = "0.*"
fancy-regex = "0.*"
float8 = { version = "0.*", features = ["num-traits", "rand_distr"] }
gemm = { version = "0.*" }
gloo = "0.*"
half = { version = "2.*", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
hf-hub = "0.*"
hound = "3.*"
image = { version = "0.*", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = { version = "0.*", default-features = false }
intel-mkl-src = { version = "0.*", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.*" }
log = "0.*"
memmap2 = { version = "0.*", features = ["stable_deref_trait"] }
num_cpus = "1.*"
num-traits = "0.*"
once_cell = "1.*"
palette = "0.*"
parquet = { version = "57.*" }
pdf2image = "0.*"
prost = "0.*"
prost-build = "0.*"
rand = "0.*"
rand_distr = "0.*"
rayon = "1.*"
rubato = "0.*"
safetensors = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
serde_plain = "1.*"
symphonia = { version = "0.*", features = ["all"] }
tekken-rs = "0.*"
thiserror = "2.*"
tokenizers = { version = "0.*", default-features = false }
tokio = "1.*"
tracing = "0.*"
tracing-chrome = "0.*"
tracing-subscriber = "0.*"
yoke = { version = "0.*", features = ["derive"] }
zip = { version = "6.*", default-features = false }
ab_glyph = "0.*"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
rustflags = ["-C", "relocation-model=static", "-C", "relro-level=off"]
overflow-checks = false
