[package]
name = "candle-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
#accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle-metal-kernels = { workspace = true, optional = true }
#objc2-metal = { workspace = true, optional = true }
#objc2-foundation = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
#ug = { workspace = true }
#ug-metal = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
default = []
mkl = ["dep:libc", "dep:intel-mkl-src"] # Use Intel MKL for BLAS
accelerate = [
    "dep:libc",
    "dep:accelerate-src",
] # Use Accelerate framework on macOS
metal = [
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "dep:candle-metal-kernels",
    "dep:ug-metal",
] # Enable Metal acceleration on macOS

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]
