[package]
name = "candle-datasets"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_datasets"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
byteorder = { workspace = true }
candle = { path = "../candle-core", package = "candle-core" }
candle-nn = { path = "../candle-nn" }
hf-hub = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
memmap2 = { workspace = true }
tokenizers = { workspace = true, features = ["onig"] }
rand = { workspace = true }
thiserror = { workspace = true }
parquet = { workspace = true }
image = { workspace = true }
