[package]
name = "candle-examples"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
candle = { workspace = true }
candle-datasets = { workspace = true, optional = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-onnx = { workspace = true, optional = true }

csv = { workspace = true }
half = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["tokio"] }
image = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
palette = { workspace = true, optional = true }
enterpolation = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rayon = { workspace = true }
rubato = { workspace = true, optional = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true, optional = true }
tokenizers = { workspace = true, features = ["onig"] }
cpal = { workspace = true, optional = true }
pdf2image = { workspace = true, optional = true }
tekken-rs = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
imageproc = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }
ab_glyph = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
# Necessary to disambiguate with tokio in wasm examples which are 1.28.1
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
] # Use Accelerate framework on macOS
mkl = [
    "dep:intel-mkl-src",
    "candle/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
] # Use Intel MKL for BLAS
onnx = ["candle-onnx"] # Enable ONNX support
metal = ["candle/metal", "candle-nn/metal"] # Enable Metal acceleration on macOS
microphone = ["cpal", "rubato"] # Enable microphone input
encodec = ["cpal", "symphonia", "rubato"] # Enable EnCodec
mimi = ["cpal", "symphonia", "rubato"] # Enable Mimi
snac = ["cpal", "symphonia", "rubato"] # Enable SNAC
depth_anything_v2 = ["palette", "enterpolation"] # Enable Depth Anything V2
tekken = ["tekken-rs"] # Enable Tekken
buildtime-download = [] # Enable build-time downloads

[[example]]
name = "reinforcement-learning"
required-features = ["pyo3"]

[[example]]
name = "onnx"
required-features = ["onnx"]

[[example]]
name = "onnx-llm"
required-features = ["onnx"]

[[example]]
name = "onnx_basics"
required-features = ["onnx"]

[[example]]
name = "whisper"
required-features = ["symphonia"]

[[example]]
name = "whisper-microphone"
required-features = ["microphone"]

[[example]]
name = "mnist-training"
required-features = ["candle-datasets"]

[[example]]
name = "llama2-c"
required-features = ["candle-datasets"]

[[example]]
name = "mimi"
required-features = ["mimi"]

[[example]]
name = "snac"
required-features = ["snac"]

[[example]]
name = "encodec"
required-features = ["encodec"]

[[example]]
name = "depth_anything_v2"
required-features = ["depth_anything_v2"]

[[example]]
name = "silero-vad"
required-features = ["onnx"]

[[example]]
name = "colpali"
required-features = ["pdf2image"]

[[example]]
name = "voxtral"
required-features = ["symphonia"]

[[example]]
name = "bert_single_file_binary"
required-features = ["buildtime-download"]
