[package]
name = "candle-examples"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
candle = { path = "../candle-core", package = "candle-core" }
candle-datasets = { path = "../candle-datasets", optional = true }
candle-nn = { path = "../candle-nn" }
candle-transformers = { path = "../candle-transformers" }
candle-onnx = { path = "../candle-onnx", optional = true }

csv = { workspace = true }
half = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["tokio"] }
image = { workspace = true }
num-traits = { workspace = true }
palette = { workspace = true, optional = true }
enterpolation = { workspace = true, optional = true }
rayon = { workspace = true }
rubato = { workspace = true, optional = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true, optional = true }
tokenizers = { workspace = true, features = ["onig"] }
cpal = { workspace = true, optional = true }
pdf2image = { workspace = true, optional = true }
tekken-rs = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
imageproc = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }
ab_glyph = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }

[features]
default = ["onnx", "buildtime-download"]
onnx = ["candle-onnx"]                           # Enable ONNX support
microphone = ["cpal", "rubato"]                  # Enable microphone input
encodec = ["cpal", "symphonia", "rubato"]        # Enable EnCodec
mimi = ["cpal", "symphonia", "rubato"]           # Enable Mimi
snac = ["cpal", "symphonia", "rubato"]           # Enable SNAC
depth_anything_v2 = ["palette", "enterpolation"] # Enable Depth Anything V2
tekken = ["tekken-rs"]                           # Enable Tekken
buildtime-download = []                          # Enable build-time downloads

[[example]]
name = "onnx"
required-features = ["onnx"]

[[example]]
name = "onnx-llm"
required-features = ["onnx"]

[[example]]
name = "onnx_basics"
required-features = ["onnx"]

[[example]]
name = "whisper"
required-features = ["symphonia"]

[[example]]
name = "whisper-microphone"
required-features = ["microphone"]

[[example]]
name = "mnist-training"
required-features = ["candle-datasets"]

[[example]]
name = "llama2-c"
required-features = ["candle-datasets"]

[[example]]
name = "mimi"
required-features = ["mimi"]

[[example]]
name = "snac"
required-features = ["snac"]

[[example]]
name = "encodec"
required-features = ["encodec"]

[[example]]
name = "depth_anything_v2"
required-features = ["depth_anything_v2"]

[[example]]
name = "silero-vad"
required-features = ["onnx"]

[[example]]
name = "colpali"
required-features = ["pdf2image"]

[[example]]
name = "voxtral"
required-features = ["symphonia"]

[[example]]
name = "bert_single_file_binary"
required-features = ["buildtime-download"]
