[package]
name = "candle-kernels"
version.workspace = true
edition.workspace = true

description = "CUDA kernels for Candle"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_kernels"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]

[build-dependencies]
bindgen_cuda = { workspace = true }
