[package]
name = "candle-metal-kernels"
version.workspace = true
edition.workspace = true

description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_metal_kernels"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
half = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
objc2-metal = { workspace = true }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
half = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[profile.profiling]
inherits = "release"
debug = 2
