[package]
name = "candle-nn"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_nn"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
candle = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
objc2-metal = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
libc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
] # Use Accelerate framework on macOS
cuda = ["candle/cuda"] # Enable CUDA acceleration
cudnn = ["candle/cudnn"] # Enable cuDNN with CUDA
mkl = ["dep:intel-mkl-src", "candle/mkl"] # Use Intel MKL for BLAS
metal = [
    "candle/metal",
    "dep:candle-metal-kernels",
    "dep:objc2-metal",
] # Enable Metal acceleration on macOS

[[bench]]
name = "bench_main"
harness = false
