[package]
name = "candle-onnx"
version.workspace = true
edition.workspace = true

description = "ONNX support for Candle"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_onnx"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
candle = { path = "../candle-core", package = "candle-core" }
candle-nn = { path = "../candle-nn" }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
