[package]
name = "candle-pyo3"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-onnx = { workspace = true, optional = true }
half = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
pyo3 = { workspace = true }
float8 = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
] # Use Accelerate framework on macOS
mkl = ["dep:intel-mkl-src", "candle/mkl"] # Use Intel MKL for BLAS
onnx = ["dep:candle-onnx"] # Enable ONNX support
