[package]
name = "candle-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_transformers"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
candle-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
] # Use Accelerate framework on macOS
cuda = ["candle/cuda", "candle-nn/cuda"] # Enable CUDA acceleration
cudnn = ["candle/cudnn", "candle-nn/cudnn"] # Enable cuDNN with CUDA
flash-attn = [
    "cuda",
    "dep:candle-flash-attn",
] # Enable flash attention with CUDA
mkl = [
    "dep:intel-mkl-src",
    "candle/mkl",
    "candle-nn/mkl",
] # Use Intel MKL for BLAS
metal = ["candle/metal", "candle-nn/metal"] # Enable Metal acceleration on macOS
