[package]
name = "candle-wasm-tests"
version.workspace = true
edition.workspace = true
description = "WASM tests for candle"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle_wasm_tests"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
candle = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
