[workspace]

[package]
  name = "chloe"
  version = "0.1.0"
  edition = "2024"
  rust-version = "1.93"

[dependencies]
  anyhow = "1.0"
  clap = { version = "4.0", features = ["derive"] }
  candle = { path = "../candle-core", package = "candle-core" }
  candle-nn = { path = "../candle-nn" }
  candle-transformers = { path = "../candle-transformers" }
  candle-onnx = { path = "../candle-onnx" }
  tokenizers = { version = "0.22", features = ["onig"] }
  tracing = "0.1"
  tracing-chrome = "0.7"
  tracing-subscriber = "0.3"
  markdown = { version = "1.0", features = [
    "json",
    "serde"
  ] }
  serde = { version = "1.0", features = ["derive"] }
  toml = { version = "0.9" }
  serde_json = "1.0"
  trash_parallelism = "0.1"
  smol = "2.0"
  safetensors = "0.6"
  ggus = "0.5"
  bytemuck = "1.14"
  ggml-quants = "0.1"
  syn = { version = "2.0", features = ["full", "visit"] }
  walkdir = "2.5"
  ort = { version = "1.16" }
  rust_tokenizers = { version = "8.1.1", features = [
    "proto-compile"
  ] }
  onnx = "0.1"
  protobuf = "3.2"
