[package]
name = "tensor-tools"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[[bin]]
name = "tensor-tools"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
candle = { path = "../candle-core", package = "candle-core" }
clap = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
