[package]
name = "candle-wasm-example-phi"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true, features = ["unstable_wasm"] }
num-traits = { workspace = true }

# App crates.
anyhow = { workspace = true }
byteorder = { workspace = true }
getrandom = { workspace = true }
image = { workspace = true }
log = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Wasm specific crates.
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
